# algo-trading

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
docs/: ARCHITECTURE.md  BACKTESTING.md  CONFIGURATION.md  OPTIONS_GUIDE.md  RISK_MANAGEMENT.md  STRATEGIES.md  V2_AGENT_BRIEF.md  V2_PROGRESS.md
models/: signal_quality_v3.joblib
scripts/: smoke_notifier.py  smoke_phase10_zero_dte.py  smoke_phase11_news.py  smoke_phase12_prediction.py  smoke_phase13_performance.py  smoke_phase7.py  smoke_phase8.py  smoke_phase9_optimizer.py  smoke_trailing_conviction.py
src/: config.py  main.py
src/ai_trade/: __init__.py  _version.py  clients.py  config.py  main.py  state_persistence.py  utils.py
src/ai_trade/analysis/: __init__.py  loss_patterns.py  market_prediction.py  parameter_optimizer.py  parameter_specs.py  post_trade.py
src/ai_trade/backtest/: engine.py  options_pricing.py  runner.py
src/ai_trade/data/: historical.py  indicators.py  options_chain.py  streaming.py
src/ai_trade/execution/: options_order_manager.py  order_manager.py
src/ai_trade/ml/: __init__.py  features.py  predictor.py  trainer.py
src/ai_trade/monitoring/: console.py  cycle_timer.py  database.py  decision_logger.py  logger.py  notifier.py  performance.py
src/ai_trade/risk/: dynamic_risk.py  pdt_manager.py  position_sizer.py  risk_manager.py  smart_pdt.py
src/ai_trade/scanner/: screener.py
src/ai_trade/scheduler/: jobs.py
src/ai_trade/sentiment/: earnings_guard.py  economic_calendar.py  event_classifier.py  market_regime.py  news_sentiment.py
(+22 files in other folders)
