[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trade"
dynamic = ["version"]
description = "Automated stock trading algorithm using Alpaca API"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.30",
    "pandas>=2.0",
    "ta>=0.11",
    "apscheduler>=3.10,<4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ai-trade = "ai_trade.main:main"
ai-trade-backtest = "ai_trade.backtest.runner:main"

[tool.setuptools.dynamic]
version = {attr = "ai_trade._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
